--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/up">上传按钮 <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="/up">上传 <span class="sr-only">(current)</span></a></li>
                 </ul>
             </div>
         </div>
